fixed alignment on 2nd about page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,14 +353,12 @@ a:before, a:after {
 	margin-left: auto;
 	margin-right: auto;
 }
-#about2 p {
-	margin-top: 100px;
-}
 #about2 {
 	background: #F5F5F5;
 	padding: 10px 0;
 }
 #about2 h1 {
+	margin-top: 100px;
 	text-align: center;
 }
 #about2 h2 {
